--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "MARTIN Valentin <vmartin@voxeet.com>"
   ],
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.13",
+    "@voxeet/voxeet-web-sdk": "^1.9.6",
     "bowser": "^2.1.0",
     "chart.js": "^2.7.3",
     "express": "^4.16.4",
@@ -45,7 +45,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^1.9.0-alpha.16",
+    "@voxeet/voxeet-web-sdk": "^1.9.6",
     "express": "^4.0.0"
   },
   "files": [
