--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "start": "webpack-dev-server -d --hot --inline --content-base",
     "build": "webpack --config webpack.config.prod.js --progress"
   },
-  "author": "Voxeet",
-  "contributors": [
-    "MARTIN Valentin <vmartin@voxeet.com>"
-  ],
+  "author": "Dolby.io",
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "^2.4.4",
+    "@voxeet/voxeet-web-sdk": "^3.0.0",
     "bowser": "^2.1.0",
     "chart.js": "^2.7.3",
     "express": "^4.16.4",
@@ -45,7 +42,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^2.4.4",
+    "@voxeet/voxeet-web-sdk": "^3.0.0",
     "express": "^4.0.0"
   },
   "files": [
