--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "call-tester",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "webpack-dev-server -d --hot --inline --content-base",
     "build": "webpack --config webpack.config.prod.js --progress"
   },
+  "repository": {
+      "type": "git",
+      "url": "git+https://github.com/voxeet/voxeet-sdk-web-tool.git"
+  },
   "author": "Dolby.io",
+  "license": "MIT",
+  "bugs": {
+      "url": "https://github.com/voxeet/voxeet-sdk-web-tool/issues"
+  },
+  "homepage": "https://github.com/voxeet/voxeet-sdk-web-tool#readme",
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.0.0",
+    "@voxeet/voxeet-web-sdk": "^3.2.0",
     "bowser": "^2.11.0",
     "chart.js": "^2.9.4",
     "express": "^4.17.1",
@@ -42,7 +51,7 @@
     "webpack-dev-server": "^2.8.2"
   },
   "peerDependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.0.0",
+    "@voxeet/voxeet-web-sdk": "^3.2.0",
     "express": "^4.17.1"
   },
   "files": [
