--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-    "presets": ["env", "stage-0", "react"],
-    "plugins": [
-      "react-hot-loader/babel",
-      "transform-class-properties",
-      "transform-decorators-legacy"
-    ]
+    "presets": ["@babel/preset-env", "@babel/preset-react"]
   }
   
