--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -16,8 +16,8 @@ jobs:
 
     - name: Install and Build 🔧
       run: |
-        yarn install
-        yarn run build
+        npm install
+        npm run build
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@3.7.1
