--- a/package.json
+++ b/package.json
@@ -17,34 +17,32 @@
   },
   "homepage": "https://github.com/dolbyio-samples/comms-sdk-web-call-tester#readme",
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.4.1",
+    "@voxeet/voxeet-web-sdk": "^3.6.0",
     "bowser": "^2.11.0",
     "chart.js": "^2.9.4",
     "less": "^4.1.1",
-    "moment": "^2.29.2",
-    "react": "^17.0.1",
-    "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "moment": "^2.29.4",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
-    "babel-loader": "^8.2.2",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "less-loader": "^8.0.0",
+    "less-loader": "^11.0.0",
     "react-hot-loader": "^4.13.0",
-    "style-loader": "^2.0.0",
+    "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.1.3",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
-  },
-  "peerDependencies": {
-    "express": "^4.17.3"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "files": [
     "README.md",
