--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
   },
   "homepage": "https://github.com/dolbyio-samples/comms-sdk-web-call-tester#readme",
   "dependencies": {
-    "@voxeet/voxeet-web-sdk": "^3.6.0",
+    "@voxeet/voxeet-web-sdk": "^3.7.0",
     "bowser": "^2.11.0",
     "chart.js": "^2.9.4",
     "less": "^4.1.1",
     "moment": "^2.29.4",
     "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "^5.0.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
